# lbm-cuda-ldc-2.0

./: .gitignore  CMakeLists.txt  README.md  convert_vti.py  gal_d3q27_parallel.f90  lbm_kernel.cu  lbm_kernel.cuh  main.cpp  post-process.py
post-process/: convert_vti.py  post_process.py  requirements.txt
sim_output/: lbm_ldc_param.txt
src/: lbm_kernel.cu  lbm_kernel.cuh  main.cpp
